--- a/src/app/components/itinerary-card/itinerary-card.component.html
+++ b/src/app/components/itinerary-card/itinerary-card.component.html
@@ -9,13 +9,13 @@
     <div class="flex gap-2">
       <button
         type="button"
-        class="btn btn-warning z-10 text-white"
+        class="btn z-10 border-0 bg-blue-700 text-white"
         (click)="handleEditClick($event)">
         <mat-icon>edit</mat-icon>
       </button>
       <button
         type="button"
-        class="btn btn-error z-10 text-white"
+        class="btn z-10 border-0 bg-red-700 text-white"
         (click)="handleDeleteClick($event)">
         <mat-icon>delete</mat-icon>
       </button>
