--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,10 +10,10 @@
           <div class="boundary relative flex w-[125%] justify-center">
             <div
               class="absolute z-0 flex h-calc w-9/12 overflow-hidden rounded-xl">
-              <div class="flex w-1/2 items-center justify-start bg-blue-800">
+              <div class="flex w-1/2 items-center justify-start bg-blue-700">
                 <mat-icon class="mx-5 scale-150 text-white">edit</mat-icon>
               </div>
-              <div class="flex w-1/2 items-center justify-end bg-red-800">
+              <div class="flex w-1/2 items-center justify-end bg-red-700">
                 <mat-icon class="mx-5 scale-150 text-white">delete</mat-icon>
               </div>
             </div>
@@ -45,7 +45,7 @@
           type="button"
           class="btn fixed bottom-10 right-6 z-20 h-fit w-fit rounded-full bg-neutral-800 p-4 shadow-md shadow-white/20"
           routerLink="/new-trip">
-          <mat-icon class="text-green-400">add</mat-icon>
+          <mat-icon class="text-green-1000">add</mat-icon>
         </a>
       </div>
       <dialog #confirmModal class="modal">
@@ -54,10 +54,14 @@
           <p class="py-4">Are you sure you would like to delete this trip?</p>
           <div class="modal-action">
             <div class="flex gap-2">
-              <button class="btn btn-warning" (click)="closeModal()">
+              <button
+                class="btn border-0 bg-gray-700 text-white"
+                (click)="closeModal()">
                 Cancel
               </button>
-              <button class="btn btn-error" (click)="deleteTrip()">
+              <button
+                class="btn border-0 bg-red-600 text-white"
+                (click)="deleteTrip()">
                 Delete
               </button>
             </div>
@@ -72,7 +76,7 @@
         type="button"
         class="btn fixed bottom-10 right-6 z-20 h-fit w-fit rounded-full bg-neutral-800 p-4 shadow-md shadow-white/20"
         routerLink="/new-trip">
-        <mat-icon class="text-green-400">add</mat-icon>
+        <mat-icon class="text-green-1000">add</mat-icon>
       </a>
     }
   }
