--- a/src/app/components/trip-details/trip-details.component.html
+++ b/src/app/components/trip-details/trip-details.component.html
@@ -15,7 +15,7 @@
               getDateWithoutTime(date).valueOf() <=
                 getDateWithoutTime(trip.endDate).valueOf()
             ) {
-              <li class="mx-auto mb-1 h-6 w-6 rounded-full bg-warning px-1">
+              <li class="mx-auto mb-1 h-6 w-6 rounded-full bg-blue-400 px-1">
                 {{ date.getDate() }}
               </li>
               @if (trip.itinerary && trip.itinerary.length > 0) {
@@ -86,16 +86,20 @@
       </div>
     </div>
     <div class="flex w-full justify-end gap-2 p-4 pt-0">
-      <button class="btn btn-error" (click)="confirmTripDelete()">
+      <button
+        class="btn border-[0.5px] border-red-600 bg-transparent text-red-600"
+        (click)="confirmTripDelete()">
         Delete
       </button>
       <a
         type="button"
-        class="btn btn-warning"
+        class="btn border-[0.5px] border-blue-400 bg-transparent text-blue-400"
         [routerLink]="['/edit', this.tripToUpdate()?.docId]">
         Edit
       </a>
-      <a type="button" class="btn btn-success" routerLink="/home">Done</a>
+      <a type="button" class="bg-green-1000 btn border-0" routerLink="/home">
+        Done
+      </a>
     </div>
     <dialog #confirmDeleteActivityModal class="modal">
       <div class="modal-box">
@@ -103,10 +107,14 @@
         <p class="py-4">Are you sure you would like to delete this activity?</p>
         <div class="modal-action">
           <div class="flex gap-2">
-            <button class="btn btn-warning" (click)="closeModal()">
+            <button
+              class="btn border-0 bg-gray-700 text-white"
+              (click)="closeModal()">
               Cancel
             </button>
-            <button class="btn btn-error" (click)="deleteActivity()">
+            <button
+              class="btn border-0 bg-red-700 text-white"
+              (click)="deleteActivity()">
               Delete
             </button>
           </div>
@@ -119,10 +127,16 @@
         <p class="py-4">Are you sure you would like to delete this trip?</p>
         <div class="modal-action">
           <div class="flex gap-2">
-            <button class="btn btn-warning" (click)="closeModal()">
+            <button
+              class="btn border-0 bg-gray-700 text-white"
+              (click)="closeModal()">
               Cancel
             </button>
-            <button class="btn btn-error" (click)="deleteTrip()">Delete</button>
+            <button
+              class="btn border-0 bg-red-700 text-white"
+              (click)="deleteTrip()">
+              Delete
+            </button>
           </div>
         </div>
       </div>
