--- a/src/app/components/trip-details/trip-details.component.html
+++ b/src/app/components/trip-details/trip-details.component.html
@@ -1,6 +1,12 @@
 @if ((loading$ | async) ?? false) {
-  <div class="flex h-full w-full items-center justify-center pb-14">
-    <mat-spinner></mat-spinner>
+  <div class="absolute flex h-screen w-full flex-col gap-4 p-6">
+    <div class="skeleton h-10 w-1/2 rounded-lg"></div>
+    <div class="skeleton h-80 w-full rounded-lg"></div>
+    @for (item of [].constructor(3); track item) {
+      <div class="skeleton h-8 w-1/2 rounded-lg"></div>
+    }
+    <div
+      class="skeleton h-36 w-full rounded-lg shadow-md shadow-white/20"></div>
   </div>
 } @else {
   @if (trip$ | async; as trip) {
