--- a/src/app/components/itinerary-form/itinerary-form.component.html
+++ b/src/app/components/itinerary-form/itinerary-form.component.html
@@ -1,5 +1,5 @@
 <div
-  class="card card-compact mb-2 w-full bg-neutral-800 text-white shadow-md shadow-white/20 md:w-96">
+  class="card card-compact mb-2 w-full bg-neutral-800 text-white shadow-md shadow-white/20">
   <div class="card-body">
     <h2 class="card-title text-white">
       {{
@@ -43,7 +43,7 @@
           <form method="dialog" class="flex justify-end">
             <button
               type="button"
-              class="bg-green-1000 btn btn-sm border-0"
+              class="btn btn-sm border-0 bg-green-1000"
               (click)="closeTagModal()">
               Done
             </button>
@@ -176,7 +176,7 @@
       <form method="dialog" class="flex justify-end">
         <button
           type="button"
-          class="bg-green-1000 btn btn-sm border-0"
+          class="btn btn-sm border-0 bg-green-1000"
           (click)="closeMapModal()">
           Done
         </button>
