--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 @if ((loading$ | async) ?? false) {
-  <div class="absolute flex h-screen w-full flex-col gap-4 p-6">
+  <div class="flex h-screen w-full flex-col gap-4 p-6 md:mx-auto md:max-w-2xl">
     @for (item of [].constructor(3); track item) {
       <div
         class="skeleton h-36 w-full rounded-lg shadow-md shadow-white/20"></div>
@@ -8,9 +8,10 @@
 } @else {
   @if (trips$ | async; as trips) {
     @if (trips.length > 0) {
-      <div class="flex flex-col items-center overflow-x-hidden px-4 pb-24 pt-6">
+      <div
+        class="flex flex-col items-center overflow-x-hidden px-4 pb-24 pt-6 md:mx-auto md:max-w-3xl">
         @for (trip of trips; track trip.docId) {
-          <div class="boundary relative flex w-[125%] justify-center">
+          <div class="boundary relative flex w-[125%] justify-center md:w-full">
             <div
               class="absolute z-0 flex h-calc w-9/12 overflow-hidden rounded-xl">
               <div class="flex w-1/2 items-center justify-start bg-blue-700">
@@ -44,12 +45,15 @@
             </div>
           </div>
         }
-        <a
-          type="button"
-          class="btn fixed bottom-10 right-6 z-20 h-fit w-fit rounded-full bg-neutral-800 p-4 shadow-md shadow-white/20"
-          routerLink="/new-trip">
-          <mat-icon class="text-green-1000">add</mat-icon>
-        </a>
+        <div
+          class="fixed bottom-0 flex w-full justify-end px-6 pb-10 md:mx-auto md:max-w-xl">
+          <a
+            type="button"
+            class="btn z-20 h-fit w-fit rounded-full bg-neutral-800 p-4 shadow-md shadow-white/20"
+            routerLink="/new-trip">
+            <mat-icon class="text-green-1000">add</mat-icon>
+          </a>
+        </div>
       </div>
       <dialog #confirmModal class="modal">
         <div class="modal-box">
@@ -76,9 +80,10 @@
         class="absolute top-0 z-[-1] flex h-screen w-screen flex-col items-center justify-center overflow-x-hidden">
         <img
           ngSrc="/assets/tripNotFound.svg"
-          alt="Angular logo"
+          alt="No trips found"
           width="128"
-          height="128" />
+          height="128"
+          priority />
         <p class="text-center text-white">You currently have no trips.</p>
         <p class="text-center text-white">Tap the + to create a new trip.</p>
       </div>
