--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="m-4 mt-8 flex justify-center">
-  <mat-card class="w-full md:w-1/2">
+  <mat-card class="w-full md:max-w-xl">
     <mat-card-content>
       <div class="flex flex-col gap-6 bg-neutral-800 p-4 text-white md:p-12">
         <h2 class="self-start text-xl font-bold text-white">
