--- a/src/app/components/trip-details/trip-details.component.html
+++ b/src/app/components/trip-details/trip-details.component.html
@@ -1,5 +1,5 @@
 @if ((loading$ | async) ?? false) {
-  <div class="absolute flex h-screen w-full flex-col gap-4 p-6">
+  <div class="flex h-screen w-full flex-col gap-4 p-6 md:mx-auto md:max-w-xl">
     <div class="skeleton h-10 w-1/2 rounded-lg"></div>
     <div class="skeleton h-80 w-full rounded-lg"></div>
     @for (item of [].constructor(3); track item) {
@@ -10,7 +10,7 @@
   </div>
 } @else {
   @if (trip$ | async; as trip) {
-    <div class="flex flex-col gap-2 p-4 text-white">
+    <div class="flex flex-col gap-2 p-4 text-white md:mx-auto md:max-w-xl">
       <h1 class="text-2xl font-bold text-white">{{ trip.title }}</h1>
       <nz-calendar [nzFullscreen]="false" [nzValue]="trip.startDate">
         <ul *nzDateFullCell="let date" class="max-h-14 overflow-hidden">
@@ -91,7 +91,7 @@
         }
       </div>
     </div>
-    <div class="flex w-full justify-end gap-2 p-4 pt-0">
+    <div class="flex w-full justify-end gap-2 p-4 pt-0 md:mx-auto md:max-w-xl">
       <button
         class="btn border-[0.5px] border-red-600 bg-transparent text-red-600"
         (click)="confirmTripDelete()">
@@ -103,7 +103,7 @@
         [routerLink]="['/edit', this.tripToUpdate()?.docId]">
         Edit
       </a>
-      <a type="button" class="bg-green-1000 btn border-0" routerLink="/home">
+      <a type="button" class="btn border-0 bg-green-1000" routerLink="/home">
         Done
       </a>
     </div>
