--- a/src/app/components/error/error.component.html
+++ b/src/app/components/error/error.component.html
@@ -1,10 +1,11 @@
-<div class="flex justify-center">
+<div class="mt-20 flex w-full items-center justify-center text-white">
   <div class="m-4 flex flex-col items-center gap-4 md:w-1/2">
-    <h2 class="text-center text-3xl font-bold">
+    <img src="assets/404.svg" alt="404 image" />
+    <h2 class="text-center text-3xl font-bold text-blue-400">
       The page you are looking for does not exist.
     </h2>
     <p class="text-center text-2xl">
-      Please check the URL or click the button below to go back to the homepage.
+      Please check the URL or tap the button below to go back to the homepage.
     </p>
     <a type="button" class="btn w-fit border-0 bg-blue-400" routerLink="/home">
       Home
