--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -46,10 +46,10 @@
           </div>
         }
         <div
-          class="fixed bottom-0 flex w-full justify-end px-6 pb-10 md:mx-auto md:max-w-xl">
+          class="fixed bottom-0 z-30 flex w-full justify-end px-6 pb-10 md:mx-auto md:max-w-xl">
           <a
             type="button"
-            class="btn z-20 h-fit w-fit rounded-full bg-neutral-800 p-4 shadow-md shadow-white/20"
+            class="btn h-fit w-fit rounded-full bg-neutral-800 p-4 shadow-md shadow-white/20"
             routerLink="/new-trip">
             <mat-icon class="text-green-1000">add</mat-icon>
           </a>
