style: 💄 Added ng-zorro steps to show start and end dates

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -50,7 +50,8 @@
           <a
             type="button"
             class="btn h-fit w-fit rounded-full bg-neutral-800 p-4 shadow-md shadow-white/20"
-            routerLink="/new-trip">
+            routerLink="/new-trip"
+            aria-label="Add trip">
             <mat-icon class="text-green-1000">add</mat-icon>
           </a>
         </div>
