--- a/src/app/components/trip-details/trip-details.component.html
+++ b/src/app/components/trip-details/trip-details.component.html
@@ -11,7 +11,29 @@
 } @else {
   @if (trip$ | async; as trip) {
     <div class="flex flex-col gap-4 p-6 text-white md:mx-auto md:max-w-xl">
-      <h1 class="text-2xl font-bold text-white">{{ trip.title }}</h1>
+      <div class="flex items-center justify-between">
+        <h1 class="text-2xl font-bold text-white">
+          {{ trip.title }}
+        </h1>
+        <div class="flex gap-4">
+          <a
+            type="button"
+            class="flex items-center"
+            [routerLink]="['/edit', this.tripToUpdate()?.docId]">
+            <mat-icon>edit</mat-icon>
+          </a>
+          <button (click)="confirmTripDelete()" class="flex items-center">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+      </div>
+      <div class="flex items-end">
+        @if (baseCurrency$ | async; as baseCurrency) {
+          <p class="h-fit w-fit text-xl">
+            {{ trip.totalCost | currency: baseCurrency : 'symbol-narrow' }}
+          </p>
+        }
+      </div>
       <nz-calendar [nzFullscreen]="false" [nzValue]="trip.startDate">
         <ul *nzDateFullCell="let date" class="max-h-14 overflow-hidden">
           @if (date && trip.startDate && trip.endDate) {
@@ -52,29 +74,23 @@
         </ul>
       </nz-calendar>
       <div class="flex w-full md:justify-between">
-        <div class="flex w-1/2 flex-col items-start gap-1 text-nowrap">
+        <div class="flex w-full flex-col items-start gap-1 text-nowrap">
           <p class="flex items-center gap-2">
             <nz-steps [nzCurrent]="3" nzDirection="vertical">
               <nz-step
-                [nzTitle]="(trip.startDate | date) ?? ''"
+                [nzTitle]="
+                  (trip.startDate | date) + ' - ' + (trip.endDate | date)
+                "
                 nzIcon="schedule"></nz-step>
               <nz-step
                 [nzTitle]="
                   trip.duration + ' ' + (trip.duration === 1 ? 'day' : 'days')
                 "
-                nzIcon="field-time"></nz-step>
-              <nz-step
-                [nzTitle]="(trip.endDate | date) ?? ''"
-                nzIcon="schedule"></nz-step>
+                nzIcon="field-time"
+                class="durationStep"></nz-step>
             </nz-steps>
           </p>
         </div>
-        @if (baseCurrency$ | async; as baseCurrency) {
-          <p
-            class="my-auto flex h-fit w-fit items-center justify-center rounded-md bg-blue-700/30 px-3 py-1 text-3xl">
-            {{ trip.totalCost | currency: baseCurrency : 'symbol-narrow' }}
-          </p>
-        }
       </div>
       <div>
         <h2 class="mb-2 text-xl font-bold text-white">Itineraries:</h2>
@@ -104,17 +120,6 @@
       </div>
     </div>
     <div class="flex w-full justify-end gap-2 p-4 pt-0 md:mx-auto md:max-w-xl">
-      <button
-        class="btn border-[0.5px] border-red-600 bg-transparent text-red-600"
-        (click)="confirmTripDelete()">
-        Delete
-      </button>
-      <a
-        type="button"
-        class="btn border-[0.5px] border-blue-400 bg-transparent text-blue-400"
-        [routerLink]="['/edit', this.tripToUpdate()?.docId]">
-        Edit
-      </a>
       <a type="button" class="btn border-0 bg-green-1000" routerLink="/home">
         Done
       </a>
