style: 💄 Changed trip card and made minor changes.

--- a/src/app/components/itinerary-card/itinerary-card.component.html
+++ b/src/app/components/itinerary-card/itinerary-card.component.html
@@ -30,6 +30,8 @@
       <div class="badge border-0 bg-blue-700/40 text-white">
         {{ inputActivity()?.tag }}
       </div>
+    } @else {
+      <div class="invisible"></div>
     }
     <p class="flex self-end text-xl">
       {{
