style: 💄 Added a bounce animation to show that the trip cards can be swiped

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -26,7 +26,7 @@
               (left)="onSwipeLeft(trip.docId)"
               (right)="onSwipeRight(trip.docId)"
               (onClick)="handleTripClick(trip.docId)"
-              class="z-10 w-9/12 cursor-pointer"
+              class="animate-bounce-x z-10 w-9/12 cursor-pointer"
               cdkDrag
               cdkDragLockAxis="x"
               (cdkDragReleased)="resetPosition($event)"
