style: 💄 Made shadows more subtle and added an inner shadow behind the trip card

--- a/src/app/components/itinerary-form/itinerary-form.component.html
+++ b/src/app/components/itinerary-form/itinerary-form.component.html
@@ -1,5 +1,5 @@
 <div
-  class="card card-compact mb-4 w-full bg-neutral-800 text-white shadow-md shadow-white/20">
+  class="card card-compact mb-4 w-full bg-neutral-800 text-white shadow-md shadow-white/10">
   <div class="card-body">
     <h2 class="card-title text-white">
       {{
@@ -83,7 +83,7 @@
       <div class="mb-4 flex flex-col">
         <button
           type="button"
-          class="bg-slate-1000 mb-2 w-fit self-center rounded-t-lg border-b-[1px] border-white p-4 text-white hover:bg-transparent"
+          class="mb-2 w-fit self-center rounded-t-lg border-b-[1px] border-white bg-slate-1000 p-4 text-white hover:bg-transparent"
           (click)="openMapModal()">
           Choose location on map
         </button>
