--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -14,10 +14,12 @@
           <div class="boundary relative flex w-[125%] justify-center md:w-full">
             <div
               class="absolute z-0 flex h-calc w-9/12 overflow-hidden rounded-xl">
-              <div class="flex w-1/2 items-center justify-start bg-blue-700">
+              <div
+                class="shadow-inner-around flex w-1/2 items-center justify-start bg-blue-700">
                 <mat-icon class="mx-5 scale-150 text-white">edit</mat-icon>
               </div>
-              <div class="flex w-1/2 items-center justify-end bg-red-700">
+              <div
+                class="shadow-inner-around flex w-1/2 items-center justify-end bg-red-700">
                 <mat-icon class="mx-5 scale-150 text-white">delete</mat-icon>
               </div>
             </div>
