--- a/src/app/components/itinerary-card/itinerary-card.component.html
+++ b/src/app/components/itinerary-card/itinerary-card.component.html
@@ -1,5 +1,5 @@
 <div
-  class="hover:scale-101 mb-4 flex flex-col gap-2 rounded-xl bg-neutral-800 p-4 text-white shadow-md shadow-white/20 transition-all ease-in-out"
+  class="mb-4 flex flex-col gap-2 rounded-xl bg-neutral-800 p-4 text-white shadow-md shadow-white/10 transition-all ease-in-out hover:scale-101"
   (click)="handleItineraryClick($event)">
   <div class="flex justify-between">
     @if (inputActivity()?.title) {
