--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,9 +45,7 @@ $bon-voyage-theme: mat.define-dark-theme(
 
 .ant-picker-cell-in-view.ant-picker-cell-selected .ant-picker-cell-inner {
   background: none;
-  font-weight: bold;
-  text-decoration: underline;
-  text-decoration-color: var(--bg-color);
+  font-weight: bolder;
 }
 .ant-picker-cell-in-view.ant-picker-cell-today .ant-picker-cell-inner::before {
   border-radius: 100%;
@@ -110,7 +108,7 @@ body {
 }
 
 td {
-  vertical-align: top;
+  vertical-align: bottom;
 }
 
 ::-webkit-input-placeholder {
@@ -182,4 +180,18 @@ button:hover {
 .ant-picker-calendar-mini .ant-picker-calendar-header {
   padding-right: 0;
   padding-left: 0;
+}
+
+td:has(li.tripDate) {
+  background-color: #60a5fa33;
+}
+
+td:has(li.tripStartDate) {
+  background-color: #60a5fa33;
+  border-radius: 30px 0 0 30px;
+}
+
+td:has(li.tripEndDate) {
+  background-color: #60a5fa33;
+  border-radius: 0 30px 30px 0;
 }
