--- a/src/app/components/alter-trip/alter-trip.component.html
+++ b/src/app/components/alter-trip/alter-trip.component.html
@@ -75,8 +75,12 @@
     </form>
     <dialog #confirmModal class="modal">
       <div class="modal-box bg-neutral-800">
-        <h3 class="text-lg font-bold">Hold on!</h3>
-        <p class="py-4">Are you sure you would like to delete this activity?</p>
+        <h3 class="text-2xl font-bold">Hold on!</h3>
+        <p class="py-4">
+          Are you sure you would like to delete
+          {{ activityToDelete()?.title ?? 'this activity' }} from
+          {{ selectedTrip()?.title ?? 'this trip' }}?
+        </p>
         <div class="modal-action">
           <div class="flex gap-2">
             <button
