--- a/src/app/components/itinerary-details/itinerary-details.component.html
+++ b/src/app/components/itinerary-details/itinerary-details.component.html
@@ -88,8 +88,12 @@
     </div>
     <dialog #confirmModal class="modal">
       <div class="modal-box">
-        <h3 class="text-lg font-bold">Hold on!</h3>
-        <p class="py-4">Are you sure you would like to delete this activity?</p>
+        <h3 class="text-2xl font-bold">Hold on!</h3>
+        <p class="py-4">
+          Are you sure you would like to delete
+          {{ activity()?.title ?? 'this activity' }} from
+          {{ tripToUpdate()?.title ?? 'this trip' }}?
+        </p>
         <div class="modal-action">
           <div class="flex gap-2">
             <button
