--- a/src/app/components/trip-details/trip-details.component.html
+++ b/src/app/components/trip-details/trip-details.component.html
@@ -148,8 +148,11 @@
     </div>
     <dialog #confirmDeleteActivityModal class="modal">
       <div class="modal-box">
-        <h3 class="text-lg font-bold">Hold on!</h3>
-        <p class="py-4">Are you sure you would like to delete this activity?</p>
+        <h3 class="text-2xl font-bold">Hold on!</h3>
+        <p class="py-4">
+          Are you sure you would like to delete
+          {{ activityToDelete()?.title }} from {{ tripToUpdate()?.title }}?
+        </p>
         <div class="modal-action">
           <div class="flex gap-2">
             <button
@@ -168,8 +171,16 @@
     </dialog>
     <dialog #confirmDeleteTripModal class="modal">
       <div class="modal-box">
-        <h3 class="text-lg font-bold">Hold on!</h3>
-        <p class="py-4">Are you sure you would like to delete this trip?</p>
+        <h3 class="text-2xl font-bold">Hold on!</h3>
+        <div class="py-4">
+          <p class="text-lg">
+            Are you sure you would like to delete
+            {{ tripToUpdate()?.title ?? 'this trip' }}?
+          </p>
+          <p class="pt-2">
+            You will be deleting the associated itineraries as well.
+          </p>
+        </div>
         <div class="modal-action">
           <div class="flex gap-2">
             <button
