--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -4,8 +4,13 @@
     class="absolute top-0 z-10 h-full w-full bg-gradient-to-t from-slate-1000 to-slate-1000/20"></div>
   <div class="absolute top-2/3 z-20 flex justify-center">
     <div class="m-4 flex flex-col gap-2 text-center md:w-1/3 md:text-start">
-      <h2 class="text-3xl font-bold text-blue-400">
-        Discover the joy of seamless travel planning with BonVoyage!
+      <h2
+        class="flex flex-col items-center text-3xl font-bold text-blue-400 md:items-start">
+        Discover the joy of seamless travel planning with
+        <span class="flex w-fit gap-0">
+          <span class="text-white">Bon</span>
+          Voyage!
+        </span>
       </h2>
       <p class="text-lg text-white">
         Effortlessly plan and organize your custom itineraries. Say goodbye to
