--- a/src/app/components/itinerary-form/itinerary-form.component.html
+++ b/src/app/components/itinerary-form/itinerary-form.component.html
@@ -83,7 +83,7 @@
       <div class="mb-4 flex flex-col">
         <button
           type="button"
-          class="mb-2 w-fit self-center rounded-t-lg border-b-[1px] border-white bg-slate-1000 p-4 text-white hover:bg-transparent"
+          class="mb-2 w-fit self-center rounded-t-lg border-b border-white bg-slate-1000 p-4 text-white hover:bg-transparent"
           (click)="openMapModal()">
           Choose location on map
         </button>
