--- a/src/styles.scss
+++ b/src/styles.scss
@@ -195,3 +195,8 @@ td:has(li.tripEndDate) {
   background-color: #60a5fa33;
   border-radius: 0 30px 30px 0;
 }
+
+td:has(li.tripStartAndEndDate) {
+  background-color: #60a5fa33;
+  border-radius: 30px 30px 30px 30px;
+}
